# pivoshenko.theme

./: .editorconfig  .gitignore  Makefile  README.md  justfile  pyproject.toml
palettes/: morok.json  morok_dark.json  morok_light.json  night.json  pivoshenko-night.json
scripts/: bundle.py  render.py
showcase/: README.md  package.json  pnpm-lock.yaml
showcase/app/: globals.css  layout.tsx  page.tsx
showcase/app/colors/: page.tsx
showcase/app/ports/: page.tsx
showcase/components/: footer.tsx  nav.tsx  palette-explorer.tsx  ports-grid.tsx
showcase/lib/: theme-data.ts
templates/: bat.tmTheme.jinja  bottom.toml.jinja  delta.gitconfig.jinja  delta.gitconfig.tmpl  discord.theme.css.jinja  fish.theme.jinja  fzf.fish.jinja  ghostty.conf.tmpl  helix.toml.jinja  k9s.yaml.jinja  lazygit.yml.jinja  spicetify.color.ini.jinja  starship-palette.toml.tmpl  starship.toml.jinja  vscode.json.jinja  zed.json.jinja  zellij.kdl.jinja  zen.userChrome.css.jinja  zen.userContent.css.jinja
templates/bottom/: theme.toml.jinja
templates/delta/: theme.gitconfig.jinja
templates/fish/: theme.theme.jinja
templates/fzf/: theme.fish.jinja
templates/ghostty/: theme.conf.jinja
templates/obsidian/: manifest.json.jinja  theme.css.jinja
templates/vscode/: theme.json.jinja
templates/zellij/: theme.kdl.jinja
templates/zen/: userContent.css.jinja
userstyles/lib/: lib.less
userstyles/styles/: advent_of_code.user.less
userstyles/styles/advent-of-code/: style.user.less
userstyles/styles/alacritty.org/: style.user.less
userstyles/styles/alternativeto/: style.user.less
(+130 files in other folders)
